--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,8 @@
     "es6": true,
     "node": true
   },
-  "extends": [
-    "standard"
-  ],
+  "extends": ["standard"],
+  "plugins": ["prettier"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly",
@@ -16,6 +15,8 @@
     "sourceType": "module"
   },
   "rules": {
+    "semi": "off",
+    "prettier/prettier": "error",
     "space-before-function-paren": [
       "error",
       {
@@ -23,6 +24,6 @@
         "named": "always",
         "asyncArrow": "always"
       }
-    ],
+    ]
   }
 }
